--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -61,7 +61,7 @@ button{
     justify-content: center;
     align-items: center;
     .modal-window{
-        width: 30%;
+        min-width: 600px;
         border-radius: 10px;
         background-color: $dark;
         padding: 30px;
@@ -78,6 +78,18 @@ button{
 .modal-title{
     font-size: 20px;
     color: $white;
+}
+
+@media(max-width: 768px){
+    .modal-container .modal-window{
+        min-width: 450px;
+    }
+}
+@media(max-width: 524px){
+    .modal-container .modal-window{
+        min-width: 100%;
+        height: 100vh;
+    }
 }
 
 // Inputs
