--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -125,6 +125,10 @@ input, textarea{
     border-radius: 5px;
 }
 
+textarea{
+    resize: vertical;
+}
+
 @media(max-height: 1000px){
     input, textarea{
         font-size: 16px;
